fix spacing for mobile

--- a/public/output.css
+++ b/public/output.css
@@ -833,6 +833,10 @@ video {
   margin-top: 5rem;
 }
 
+.mb-20{
+  margin-bottom: 5rem;
+}
+
 .flex{
   display: flex;
 }
@@ -871,6 +875,14 @@ video {
 
 .h-8{
   height: 2rem;
+}
+
+.h-12{
+  height: 3rem;
+}
+
+.h-16{
+  height: 4rem;
 }
 
 .max-h-\[400px\]{
@@ -1416,8 +1428,28 @@ body,
     display: grid;
   }
 
+  .sm\:h-16{
+    height: 4rem;
+  }
+
+  .sm\:w-8{
+    width: 2rem;
+  }
+
+  .sm\:w-4{
+    width: 1rem;
+  }
+
+  .sm\:w-48{
+    width: 12rem;
+  }
+
   .sm\:grid-cols-3{
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .sm\:justify-between{
+    justify-content: space-between;
   }
 }
 
@@ -1434,12 +1466,20 @@ body,
     margin-top: 8rem;
   }
 
+  .md\:mb-5{
+    margin-bottom: 1.25rem;
+  }
+
   .md\:flex{
     display: flex;
   }
 
   .md\:h-full{
     height: 100%;
+  }
+
+  .md\:h-16{
+    height: 4rem;
   }
 
   .md\:w-1\/3{
@@ -1454,8 +1494,20 @@ body,
     width: 75%;
   }
 
+  .md\:w-5\/6{
+    width: 83.333333%;
+  }
+
+  .md\:w-64{
+    width: 16rem;
+  }
+
   .md\:max-w-\[600px\]{
     max-width: 600px;
+  }
+
+  .md\:place-content-center{
+    place-content: center;
   }
 
   .md\:items-center{
@@ -1478,6 +1530,10 @@ body,
     justify-content: space-between;
   }
 
+  .md\:justify-around{
+    justify-content: space-around;
+  }
+
   .md\:gap-16{
     gap: 4rem;
   }
@@ -1489,5 +1545,11 @@ body,
   .md\:before\:max-w-\[600px\]::before{
     content: var(--tw-content);
     max-width: 600px;
+  }
+}
+
+@media (min-width: 1200px){
+  .lg\:justify-center{
+    justify-content: center;
   }
 }
